--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
       - ./app:/usr/src/app
     environment:
       FLASK_ENV: "development"
-    command: flask run --host=0.0.0.0
+    # command: flask run --host=0.0.0.0
     restart: always
 
